jm的0.2版本 后端所有路由功能效果的构建 初步完成项目

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "backmanagement",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "directories": {
     "doc": "doc"
@@ -15,6 +16,5 @@
     "express": "^4.16.4",
     "mongodb": "^3.1.10",
     "mysql": "^2.16.0"
-  },
-  "description": ""
+  }
 }
