--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "mddir": "^1.1.1",
     "mongodb": "^3.1.10",
     "mysql": "^2.16.0"
   }
